--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -1,9 +1,5 @@
 
 
-# This is an example Hyprland config file.
-# Refer to the wiki for more information.
-# https://wiki.hyprland.org/Configuring/
-
 # Please note not all available settings / options are set here.
 # For a full list, see the wiki
 
@@ -15,6 +11,7 @@
 ###DEVICE SENSITIVITIES###
 ##########################
 
+# This is just my mouse, you can remove this line if you feel like it's unnecessary
 
 device{ 
 name = logitech-g403-hero-gaming-mouse 
